--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.17",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-native": "0.74.2",
+    "react-native-incall-manager": "^4.2.0",
+    "react-native-webrtc": "^124.0.0",
+    "sip.js": "^0.21.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
