--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.17",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-incall-manager": "^4.2.0",
+    "react-native-permissions": "^4.1.5",
+    "react-native-safe-area-context": "^4.10.4",
+    "react-native-screens": "^3.31.1",
     "react-native-webrtc": "^124.0.0",
     "sip.js": "^0.21.2"
   },
